--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"@supabase/supabase-js": "^2.51.0",
 		"pnpm": "^10.13.1",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"react-router-dom": "^7.7.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.0",
