--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.1",
 		"@mui/material": "^7.2.0",
+		"@reduxjs/toolkit": "^2.8.2",
 		"@supabase/supabase-js": "^2.51.0",
 		"pnpm": "^10.13.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.7.0"
 	},
 	"devDependencies": {
